--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -29,11 +29,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  camera: ^0.10.2
+  tflite: ^1.1.2
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+assets:
+  - assets/
 
 dev_dependencies:
   flutter_test:
